--- a/better_filter_widget/static/css/better-filter-widget.css
+++ b/better_filter_widget/static/css/better-filter-widget.css
@@ -1,7 +1,7 @@
 .bfw { font-size: 14px; float: left; }
 .bfw * { box-sizing: border-box; }
-.bfw .title { float: left; width: 220px; font-size: 1.1em; color: #888; font-weight: bold; text-transform: capitalize; }
-.bfw input.item-filter { display:block; width: 200px; font-size: 1em; height: 40px; padding: 0 10px; background: #eee; border-radius: 0; margin-bottom: 0; background: #FFF;}
+.bfw .title { float: left; width: 220px; font-size: 1em; color: #888; font-weight: bold; text-transform: capitalize; }
+.bfw input.item-filter { display:block; width: 200px; font-size: 1em; height: 40px; padding: 0 10px; border-radius: 0; margin-bottom: 0; background: #FFF;}
 .bfw .item-list { overflow: auto; float: left; width: 200px; height: 185px; font-size: 1em; border: 1px solid #ccc; background: #FFF;}
 .bfw .selected-items { position: relative; top: -40px; height: 225px;}
 .bfw .item-list { float: left; font-size: 1em; margin-right: 20px;}
